# GamingData

./: .gitignore  README.md
pipeline/: Dockerfile  docker-compose.yaml  profiles.yml  pyproject.toml
pipeline/flows/: extract_load_rawg.py  extract_rawg.py  load_to_bronze.py  master_pipeline.py
pipeline/gaming_data_dbt/: dbt_project.yml
pipeline/gaming_data_dbt/models/rawg/: _sources.yml
pipeline/gaming_data_dbt/models/rawg/gold/: fct_genre_activity_monthly.sql  fct_releases_by_genre_monthly.sql  fct_releases_by_platform_monthly.sql  fct_trending_tags_monthly.sql  schema.yml
pipeline/gaming_data_dbt/models/rawg/silver/: brdg_game_genres.sql  brdg_game_platforms.sql  brdg_game_tags.sql  dim_games.sql  dim_genres.sql  dim_platforms.sql  dim_publishers.sql  dim_tags.sql  fct_game_snapshots.sql  schema.yml
pipeline/gaming_data_dbt/models/rawg/silver/staging/: stg_brdg_game_genres.sql  stg_brdg_game_platforms.sql  stg_brdg_game_tags.sql  stg_dim_games.sql  stg_dim_genres.sql  stg_dim_platforms.sql  stg_dim_publishers.sql  stg_dim_tags.sql  stg_fct_game_snapshots.sql
terraform/: apis.tf  bigquery.tf  gcs.tf  main.tf  outputs.tf  service_accounts.tf  variables.tf
